--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -6,27 +6,30 @@ body {
   font-weight: 400;
   font-size: 1rem;
   color: #1e1e1e;
-  line-height: 1.6em;
+  // line-height: 1.6em;
   -webkit-font-smoothing: subpixel-antialiased!important;
   -ms-backface-visibility: hidden;
 
 }
 
-.content a {
-  color: #007dc3;
-  font-weight: 700;
+p {
+    line-height: 1.6;
+
 }
 
 .collapse {
   position: relative;
   height: 0;
-  overflow: hidden;
+  // overflow: hidden;
   -webkit-transition: height .35s ease;
   -moz-transition: height .35s ease;
   -o-transition: height .35s ease;
   transition: height .35s ease
 }
 
+.collapse.navbar-collapse {
+  overflow: hidden;
+}
 
 .linkcolumn a {
   word-break: break-word
@@ -117,44 +120,10 @@ h1 {
   // padding-left: .5em;
   color: #fff;
   font-size: 2.25rem;
-  font-weight: 800;
+  font-weight: 700;
   // text-transform: uppercase;
 }
-h2 {
-font-weight: 700;
-color: #00447c;
-font-size: 1.75rem;
-width: 100%;
-margin: 0px;
-margin-bottom:5px;
-line-height: 1.3;
-}
-h3 {
-  color: #717073;
-  font-size: 1.3rem;
-  font-weight: 500;
-  margin-bottom: 4px;
-  margin-top: 2px
-}
-h4 {
-  color: #000000;
-  font-size: 1.2rem;
-  font-weight: 700;
-  line-height: 1.3;
-}
-h5 {
-  color: #535354;
-  font-size: 1.125em;
-  font-weight: 700;
-}
-h6 {
-  background-color: #005fae;
-  color: #fff;
-  text-align: left;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 5px;
-}
+
 // .msudenver_logo img {
 //   padding-bottom: 15px;
 //   padding-top: 25px;
@@ -187,9 +156,9 @@ h6 {
 .nav-header {
   color: #fff
 }
-.form-control {
-  width: 80%
-}
+// .form-control {
+//   width: 80%
+// }
 // .navbar-inverse .navbar-nav>.open {
 //   background-color: #2c3e50
 // }
@@ -271,6 +240,84 @@ a.t4Edit-page:hover {
     padding-bottom: 15px;
 }
 
+
 .well > .img-responsive {
   padding-left: 0px;
+}
+
+
+
+.hero-caption {
+  color: #fff;
+  right: 0;
+  bottom: 0;
+  position: static !important;
+  background: #000;
+  margin: 0;
+  font-size: 16.1px;
+  font-weight: 100;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  bottom: auto !important;
+  padding: 0%;
+}
+.hero-caption h1, .hero-caption h2, .hero-caption h3, .hero-caption h4, .hero-caption h5, .hero-caption h6 {
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.75rem;
+}
+.hero p {
+  padding: 0 2%;
+}
+.hero span > :first-child {
+  padding-top: 2% !important;
+}
+.hero span > :last-child {
+  padding-bottom: 2% !important;
+}
+
+h2 {
+    font-weight: 700;
+    color: #00447c;
+    font-size: 1.75rem;
+    width: 100%;
+    // margin: 0px;
+    margin-bottom: 5px;
+    line-height: 1.3;
+}
+
+h3 {
+  color: #717073;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-bottom: 4px;
+  margin-top: 2px;
+}
+h4 {
+    color: #000000;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+@media screen and (min-width: 992px) {
+  .hero-caption {
+    width: 40%;
+    float: right;
+    position: absolute !important;
+    top: inherit;
+    right: 0;
+    left: auto;
+    bottom: 0 !important;
+    padding: 2%;
+  }
+  .hero p {
+    padding: inherit;
+  }
+  .hero span > :first-child {
+    padding-top: inherit;
+  }
+  .hero span > :last-child {
+    padding-bottom: inherit;
+  }
 }
