adds entire admissions homepage student application section. adds new files, homepage-apply.scss and admissionsHomepageApply.html. updates admissionts.html include statements to include new component. updates buttons.scss with new button styles. updates responsive-overrides.scss with admissionsHomepageApply classes. updates import statement in main-style.scss with new homepage-apply.scss file. adds compiled main-style.css file.

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageSlider.html
@@ -20,19 +20,19 @@
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
 				  <div class="carousel-caption">
 				    <!-- captions go here - which we will NOT be using  -->
 				  </div>
 			</div> <!-- first slide END -->
 			<div class="item">
-			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
 				  <div class="carousel-caption">
 					<!-- captions go here - which we will NOT be using  -->
 				  </div>
 			</div><!-- second slide END -->
 			<div class="item">
-			  <img src="style-assets/media/admissionsHomepage/header-featured-story.png" alt="...">
+			  <img src="style-assets/media/admissions-redesign/header-featured-story.png" alt="msudenver campus">
 				  <div class="carousel-caption">
 					<!-- captions go here - which we will NOT be using  -->
 				  </div>
@@ -54,5 +54,3 @@
 		</div>
 	</div>	
 </section>
-
-
