--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -10,6 +10,21 @@
 			padding-right: 15px;
 		}
 	}
+
+	section.admissionsHomepageApply {
+		.application-outer-col {
+			padding-bottom: 20px;
+			padding-left: 15px;
+			padding-right: 15px;
+		}
+		.application-cta {
+			max-width: 395px;
+		}
+		.application-copy {
+			padding-top: 15px;
+			padding-bottom: 0px;
+		}
+	}
 }
 
 @media only screen and (max-width: 767px) {
@@ -25,5 +40,21 @@
 			margin-bottom: 32px;
 		}
 
+	}
+
+	section.admissionsHomepageApply {
+		.application-row {
+			padding-top: 10px;
+		}
+		.application-outer-col {
+			padding-bottom: 30px;
+		}
+		.application-cta {
+			margin-top: 30px;
+		}
+		.application-image-padding {
+			padding-left: 0px;
+			padding-right: 0px;
+		}
 	}
 }
