--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -58,7 +58,9 @@ header {
 /** Admissions Homepage **/
 @import "admissionsHomepage/buttons.scss";
 @import "admissionsHomepage/homepage-slider.scss";
+@import "admissionsHomepage/homepage-apply.scss";
 @import "admissionsHomepage/responsive-overrides.scss";
+
 
 /** President's page styles **/
 @import "msu-partials/president-site";
