--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11534,6 +11534,28 @@ h4 {
   text-align: center;
 }
 
+.application-cta {
+  margin-top: 20px;
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  border-color: #00447c;
+  border-width: 5px;
+  background: rgba(0, 0, 0, 0);
+  color: #00447c;
+  border-radius: 0px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+}
+
+.application-cta:hover {
+  color: #fff;
+  background: rgba(0, 68, 124, 0.75);
+  border-color: #00447c;
+}
+
 section.admissionsHomepageSlider {
   background-color: #00447C;
   color: #ffffff;
@@ -11600,6 +11622,38 @@ section.admissionsHomepageSlider .container.carousel-cta .details {
   padding-bottom: 20px;
 }
 
+section.admissionsHomepageApply .application-outer-col {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 40px;
+}
+section.admissionsHomepageApply .application-row {
+  padding-top: 35px;
+}
+section.admissionsHomepageApply .application-image {
+  width: 100%;
+}
+section.admissionsHomepageApply .application-copy {
+  padding-top: 30px;
+  padding-bottom: 25px;
+  font-weight: 500;
+}
+section.admissionsHomepageApply a.application-link {
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #0f61bd;
+  font-size: 16px;
+  font-weight: 700;
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+section.admissionsHomepageApply a.application-link:hover {
+  color: #00447c;
+}
+section.admissionsHomepageApply a.application-link span.pointer {
+  font-size: 14px;
+}
+
 @media only screen and (max-width: 991px) {
   section.admissionsHomepageSlider .carousel-controls {
     width: 35%;
@@ -11608,6 +11662,19 @@ section.admissionsHomepageSlider .container.carousel-cta .details {
   section.admissionsHomepageSlider .container.carousel-cta {
     padding-left: 15px;
     padding-right: 15px;
+  }
+
+  section.admissionsHomepageApply .application-outer-col {
+    padding-bottom: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  section.admissionsHomepageApply .application-cta {
+    max-width: 395px;
+  }
+  section.admissionsHomepageApply .application-copy {
+    padding-top: 15px;
+    padding-bottom: 0px;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -11619,6 +11686,20 @@ section.admissionsHomepageSlider .container.carousel-cta .details {
   section.admissionsHomepageSlider .hero-cta {
     margin-top: 5px;
     margin-bottom: 32px;
+  }
+
+  section.admissionsHomepageApply .application-row {
+    padding-top: 10px;
+  }
+  section.admissionsHomepageApply .application-outer-col {
+    padding-bottom: 30px;
+  }
+  section.admissionsHomepageApply .application-cta {
+    margin-top: 30px;
+  }
+  section.admissionsHomepageApply .application-image-padding {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
 /** President's page styles **/
