adds admissions homepage panel section. adds styles for homepage panels component. updates imports and include statements on admissionts.html and main-style.scss. adds compiled main-style.css file

--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -59,6 +59,7 @@ header {
 @import "admissionsHomepage/buttons.scss";
 @import "admissionsHomepage/homepage-slider.scss";
 @import "admissionsHomepage/homepage-apply.scss";
+@import "admissionsHomepage/homepage-panels.scss";
 @import "admissionsHomepage/responsive-overrides.scss";
 
 
