--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11654,6 +11654,15 @@ section.admissionsHomepageApply a.application-link span.pointer {
   font-size: 14px;
 }
 
+section.admissionsHomepagePanels .panel-row {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+section.admissionsHomepagePanels .panel-sizing {
+  height: 33.75vw;
+}
+
 @media only screen and (max-width: 991px) {
   section.admissionsHomepageSlider .carousel-controls {
     width: 35%;
