adds additional styles for the the button positioning and design for the panels section

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
@@ -1,46 +1,36 @@
 <section class="admissionsHomepagePanels">
 
 	<div class="row panel-row">
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-			
-		</div>
-
-		<!-- <div class="col-xs-12 col-sm-6 col-md-6 panel-sizing">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing"">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div>
-		<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing">
-			<img src="style-assets/media/admissions-redesign/bienvenidos.jpg" alt="" class="img-responsive">
-		</div> -->
-
-
-
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Visit</button>
+			</div>
+		</a>
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Campus Life</button>
+			</div>
+		</a>
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Cost + Financial Aid</button>
+			</div>
+		</a>
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Virtual Tour</button>
+			</div>
+		</a>
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Academic Programs</button>
+			</div>
+		</a>
+		<a href="#">
+			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
+				<button class="btn btn-lg btn-default panel-cta center-block">Bienvenidos</button>
+			</div>
+		</a>
 	</div>
 
 </section>
