--- a/development/terminalfour/src/sass/admissionsHomepage/buttons.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/buttons.scss
@@ -40,3 +40,22 @@
     background: rgba(0, 68, 124, 0.75);
     border-color: #00447c;
 }
+
+.panel-cta {
+    margin-top: 20px;
+    padding: 15px 16px;
+    // margin-bottom: 30px;
+    font-family: $font-family-sans-serif;
+    background: rgba(0, 68, 124, 0.8);
+    color: #ffffff;
+    border-radius: 0px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 1rem;
+    font-weight: 700;
+    text-align: center;
+    width: 100%;
+    max-width: 290px;
+    position: relative;
+    top: 65%;
+}
